[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicommunity"
version = "1.0.0"
description = "AI交流社区命令行工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.8.2",
    "tabulate>=0.9.0",
]

[project.scripts]
aicomm = "aicommunity.cli:cli"
